--- a/src/index.css
+++ b/src/index.css
@@ -19,3 +19,22 @@
         src: url('../fonts/Morabba/woff2/Morabba-Medium.woff2');
     }
 }
+
+
+@layer components {
+ .navbar::before {
+    content: '';
+    position: absolute;
+    left: 0;
+    right: 0;
+    top: -2rem;
+    background-color: darkblue;
+    width: 100%;
+    height: 2rem;
+    border-radius: 0 0 2rem 2rem;
+    z-index: 1;
+ }   
+}
+body {
+    font-family: 'Dana';
+}
