--- a/src/index.css
+++ b/src/index.css
@@ -21,20 +21,11 @@
 }
 
 
-@layer components {
- .navbar::before {
-    content: '';
-    position: absolute;
-    left: 0;
-    right: 0;
-    top: -2rem;
-    background-color: darkblue;
-    width: 100%;
-    height: 2rem;
-    border-radius: 0 0 2rem 2rem;
-    z-index: 1;
- }   
+@layer utilities {
+    .submenu:hover .subsubmenu  {
+        opacity: 1;
+        visibility: visible;
+    }
+
 }
-body {
-    font-family: 'Dana';
-}
+
